--- a/resolution.tex
+++ b/resolution.tex
@@ -184,7 +184,7 @@ To understand the degree to which atmospheric stability in the deep tropics is d
 
 Figure~\ref{fig:cape}b shows that fractional area of air columns in the deep tropics that are predominantly subsiding (ascending) changes drastically with resolution, from $0.32$ ($0.68$) in the $ne20$ ($\Delta x = 166.8$ km) run, and monotonically increasing (decreasing) with resolution to $0.51$ ($0.49$) in the $ne120$ ($\Delta x = 27.8$ km) run. Interestingly, the sum of the product of the fractional areas with their corresponding CAPE values gives approximately the same CAPE values computed from the mean temperature and moisture profiles over the entire deep tropics (Figure~\ref{fig:cape}a). This provides strong evidence that CAPE values in the deep tropics are decreasing with resolution because a larger (smaller) space-time fraction of the deep tropics are made up of predominantly subsiding (ascending) grid columns with increasing resolution.
 
-Poleward of the deep tropics and within the subtropics, the logistic regression indicates that subsidence is a poor predictor of $FREQZM$ (Figure~\ref{fig:4reg}a,b). The R-value decreases to a local minimum between $15^{\circ} - 20^{\circ}$ latitude, and the magnitude of the sensitivity parameter steeply declines. The local minimum in the R-value corresponds with a local maximum in the latent heat fluxes (Figure~\ref{fig:4reg}c), indicating that the boundary layer is being driven unstable by large surface latent heat fluxes. The CAPE values in the $10^{\circ} - 15^{\circ}$ latitude region are likely to be small, since the ZM precipitation rate consists primarily of drizzle (Figure~\ref{fig:4reg}d). The predominance of drizzle in this region is probably a result of the large subsiding motion in the subtropics (not shown) constraining CAPE from becoming too large. AGCMs are known to suffer from an excess drizzle bias in precisely this region \citep{D2006JCLIM}, and this analysis indicates that this bias is due to the use of a CAPE trigger function.
+Poleward of the deep tropics and within the subtropics, the logistic regression indicates that subsidence is a poor predictor of $FREQZM$ (Figure~\ref{fig:4zonal}a,b). The R-value decreases to a local minimum between $15^{\circ} - 20^{\circ}$ latitude, and the magnitude of the sensitivity parameter steeply declines. The local minimum in the R-value corresponds with a local maximum in the latent heat fluxes (Figure~\ref{fig:4rzonal}c), indicating that the boundary layer is being driven unstable by large surface latent heat fluxes. The CAPE values in the $10^{\circ} - 15^{\circ}$ latitude region are likely to be small, since the ZM precipitation rate consists primarily of drizzle (Figure~\ref{fig:4zonal}d). The predominance of drizzle in this region is probably a result of the large subsiding motion in the subtropics (not shown) constraining CAPE from becoming too large. AGCMs are known to suffer from an excess drizzle bias in precisely this region \citep{D2006JCLIM}, and this analysis indicates that this bias is due to the use of a CAPE trigger function.
 
 \ack This class file was developed by Sunrise Setting Ltd,
 Paignton, Devon, UK. Website:\\
